<!--
  ~   *************************************************************
  ~   Created by Raghavan at softface.in on 18/08/23, 12:22 am
  ~    funwithmetamil@gmail.com
  ~     Last modified 17/08/23, 9:39 pm
  ~     Copyright (c) 2023.
  ~     All rights reserved.
  ~   *************************************************************
  -->

<resources>
    <string name="app_name">FreeSkills</string>
    <string name="get_started">Find It</string>
    <string name="loading">loading..</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="default_notification_channel_id">default_channel</string>
    <!--Onbarding String Values-->
    <string name="screen1">GetStarted!</string>
    <string name="screen2">Learn What You Like</string>
    <string name="screen3">Get Reminder</string>
    <string name="explore_youtube">Find Your Future</string>
    <string name="screen1desc">We are excited to have you on board and ready to help you start your coding journey.we will provide you with all the necessary information to get started with our platform.</string>
    <string name="screen2desc">Learn the syntax, basic programming concepts such as variables, data types, and control structures. Practice by writing small programs and experimenting with code.</string>
    <string name="screen3desc">We Help You to get focused On Your journey </string>
    <string name="startDesc">Self-Trust is First Secret of Success</string>
    <string name="msg_token_fmt" />
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blue_name">cardviewtoplayeranim</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="blue_namemain">cardmainanimA</string>
    <string name="app_version">Alpha_1.0.3</string>
    <string name="manage_amp_setup_the_notification">Manage &amp; setup the notification</string>
</resources>
