<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#D4D8E1"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    app:flow_horizontalAlign="center">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_4"
        android:contentDescription="@string/loading" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/rubik_semibold"
        android:text="@string/explore_youtube"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/startDesc"
        android:fontFamily="@font/rubik_light"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/rubik_semibold"
        android:padding="8dp"
        android:text="@string/get_started"
        android:textSize="20sp"
        app:cornerRadius="5dp" />
</LinearLayout>