<?xml version="1.0" encoding="utf-8"?><!--
  ~   *************************************************************
  ~   Created by Raghavan at softface.in on 07/08/23, 10:57 pm
  ~    funwithmetamil@gmail.com
  ~     Last modified 30/07/23, 11:21 pm
  ~     Copyright (c) 2023.
  ~     All rights reserved.
  ~   *************************************************************
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.mainsetting">

    <ScrollView
        android:id="@+id/mainSsdcroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/action_settings"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- TODO: Update blank fragment layout -->
            <ImageView
                android:id="@+id/profileimg"
                android:layout_width="196dp"
                android:layout_height="171dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:transitionName="@string/blue_name"
                app:srcCompat="@drawable/youtube_social_icon_red"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="65dp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"

                android:fontFamily="@font/inexbold"
                android:text="USername"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="9dp"
                android:background="@drawable/rounded_bg"
                android:backgroundTint="@color/Oranger"
                android:fontFamily="@font/lsblack"
                android:gravity="center"
                android:padding="10dp"
                android:text="   Sign out  "
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/whitelistlay"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"

                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inexbold"

                    android:gravity="center|start"
                    android:text="Whitelist"
                    android:textColor="@color/white"
                    android:textSize="23sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/inexnormail"
                    android:gravity="center|start"
                    android:text="Manage Your Whitelist"
                    android:textColor="@color/grey1"
                    android:textSize="17sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/clearcontinue"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:fontFamily="@font/inexbold"
                    android:gravity="center|start"
                    android:text="Clear continue watching"
                    android:textColor="@color/white"
                    android:textSize="23sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/inexnormail"
                    android:gravity="center|start"
                    android:text="Clear all your watching history"
                    android:textColor="@color/grey1"
                    android:textSize="17sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/Apply"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/inexbold"
                    android:gravity="center|start"
                    android:text="Apply for certificate"
                    android:textColor="@color/white"
                    android:textSize="23sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/inexnormail"
                    android:gravity="center|start"
                    android:text="Request your certificate here"
                    android:textColor="@color/grey1"
                    android:textSize="17sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/inexbold"
                    android:gravity="center|start"
                    android:text="Notification"
                    android:textColor="@color/white"
                    android:textSize="23sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/inexnormail"
                    android:gravity="center|start"
                    android:text="@string/manage_amp_setup_the_notification"
                    android:textColor="@color/grey1"
                    android:textSize="17sp" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/aboutus"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/inexbold"
                    android:gravity="center|start"
                    android:text="About Us"
                    android:textColor="@color/white"
                    android:textSize="23sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <!--end
            here-->

            <TextView
                android:id="@+id/appversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/app_version"
                android:textColor="@color/grey1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom|center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="6dp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>